avance de formacion

--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -1909,10 +1909,10 @@
       ],
       "metadata": {
         "id": "J24VXtFo5mVo",
-        "outputId": "f547672e-f1dc-4076-b563-ae09022aadb9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f547672e-f1dc-4076-b563-ae09022aadb9"
       },
       "execution_count": 2,
       "outputs": [
@@ -1943,10 +1943,10 @@
       ],
       "metadata": {
         "id": "NJCd0dFZ5pnI",
-        "outputId": "d041b0fa-09c6-4f51-865d-66664222a94f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d041b0fa-09c6-4f51-865d-66664222a94f"
       },
       "execution_count": 16,
       "outputs": [
@@ -1995,10 +1995,10 @@
       ],
       "metadata": {
         "id": "XQp1LOCZ5mNw",
-        "outputId": "3ccca470-918d-4095-dd6a-37537353b0c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3ccca470-918d-4095-dd6a-37537353b0c8"
       },
       "execution_count": 21,
       "outputs": [
@@ -2023,10 +2023,10 @@
       ],
       "metadata": {
         "id": "z7Hj0IPG5mGy",
-        "outputId": "188a3602-4b83-4421-ba4e-fbb944ce651d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "188a3602-4b83-4421-ba4e-fbb944ce651d"
       },
       "execution_count": 22,
       "outputs": [
@@ -2060,10 +2060,10 @@
       ],
       "metadata": {
         "id": "73a8tHou5l-S",
-        "outputId": "87a82caa-5916-4361-e494-5a2a00f13059",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "87a82caa-5916-4361-e494-5a2a00f13059"
       },
       "execution_count": 25,
       "outputs": [
@@ -2131,10 +2131,10 @@
       ],
       "metadata": {
         "id": "7UmeVLpv5l1o",
-        "outputId": "21daf162-78c9-4942-982a-6d03d32e91f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "21daf162-78c9-4942-982a-6d03d32e91f0"
       },
       "execution_count": 36,
       "outputs": [
@@ -2175,10 +2175,10 @@
       ],
       "metadata": {
         "id": "DR9cntf75ltq",
-        "outputId": "1065565b-0523-4fc8-f938-1d439949af49",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1065565b-0523-4fc8-f938-1d439949af49"
       },
       "execution_count": 58,
       "outputs": [
@@ -2228,10 +2228,10 @@
       ],
       "metadata": {
         "id": "Rh3P86j863Qx",
-        "outputId": "920bcc31-e101-4ba6-b0f8-3390bf742065",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "920bcc31-e101-4ba6-b0f8-3390bf742065"
       },
       "execution_count": 59,
       "outputs": [
@@ -2298,10 +2298,10 @@
       ],
       "metadata": {
         "id": "K8DVAyWG5lng",
-        "outputId": "8a9ec4f6-dfb7-49fe-c8bd-2397c8c52ab6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8a9ec4f6-dfb7-49fe-c8bd-2397c8c52ab6"
       },
       "execution_count": 61,
       "outputs": [
@@ -2341,10 +2341,10 @@
       ],
       "metadata": {
         "id": "w93ywM1n5lYY",
-        "outputId": "2b046819-60cf-4d8a-fc6a-ba2af65f0ae4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2b046819-60cf-4d8a-fc6a-ba2af65f0ae4"
       },
       "execution_count": 64,
       "outputs": [
@@ -2417,44 +2417,136 @@
       "metadata": {
         "id": "jlEP-c2YthpB"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombres=[]\n",
+        "notas=[]\n",
+        "for i in range(len(notas_grupo)):\n",
+        "  if i%4==0:\n",
+        "    nombres.append(notas_grupo[i])\n",
+        "  else:\n",
+        "    notas.append(notas_grupo[i])"
+      ],
       "metadata": {
         "id": "azR_cX-ILghB"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombres"
+      ],
       "metadata": {
-        "id": "GhfsJvs9LgjY"
+        "id": "GhfsJvs9LgjY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8796e46f-5740-4250-83ea-4ca62e7b6426"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Juan', 'Maria', 'José', 'Claudia', 'Ana']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas"
+      ],
       "metadata": {
-        "id": "tB8FA20gLiog"
+        "id": "tB8FA20gLiog",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "527ee5c4-b57b-4d2b-8cd7-80d6e355f792"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[8.0, 9.0, 10.0, 9.0, 7.0, 6.0, 3.4, 7.0, 7.0, 5.5, 6.6, 8.0, 6.0, 10.0, 9.5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas_separadas=[]\n",
+        "for i in range(0,len(notas),3):\n",
+        "  notas_separadas.append(notas[i:i+3])\n",
+        "  print(notas[i:i+3]) #extrae las 3 notas de cada estudiante y las imprime\n",
+        "print(notas_separadas) #imprime la lista con las notas cada estudiante en cada lista incorporada"
+      ],
       "metadata": {
-        "id": "SCi8Jl82Liqo"
+        "id": "SCi8Jl82Liqo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "19633e4e-156c-49c4-c045-49877278dbdf"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[8.0, 9.0, 10.0]\n",
+            "[9.0, 7.0, 6.0]\n",
+            "[3.4, 7.0, 7.0]\n",
+            "[5.5, 6.6, 8.0]\n",
+            "[6.0, 10.0, 9.5]\n",
+            "[[8.0, 9.0, 10.0], [9.0, 7.0, 6.0], [3.4, 7.0, 7.0], [5.5, 6.6, 8.0], [6.0, 10.0, 9.5]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "################################################# profesor\n",
+        "notas_separadas=[]\n",
+        "for i in range(0,len(notas),3):\n",
+        "  notas_separadas.append([notas[i],notas[i+1], notas[i+2]]) #append agrega el elemento al final de la lista\n",
+        "print(notas_separadas)"
+      ],
+      "metadata": {
+        "id": "OeCFdGRwZAcj",
+        "outputId": "c0ca1089-0ec6-4275-f0ad-8edad3262d3a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[8.0, 9.0, 10.0], [9.0, 7.0, 6.0], [3.4, 7.0, 7.0], [5.5, 6.6, 8.0], [6.0, 10.0, 9.5]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
