avance con tuplas

--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -1914,7 +1914,7 @@
         },
         "outputId": "f547672e-f1dc-4076-b563-ae09022aadb9"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1948,7 +1948,7 @@
         },
         "outputId": "d041b0fa-09c6-4f51-865d-66664222a94f"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2000,7 +2000,7 @@
         },
         "outputId": "3ccca470-918d-4095-dd6a-37537353b0c8"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2028,7 +2028,7 @@
         },
         "outputId": "188a3602-4b83-4421-ba4e-fbb944ce651d"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2065,7 +2065,7 @@
         },
         "outputId": "87a82caa-5916-4361-e494-5a2a00f13059"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2136,7 +2136,7 @@
         },
         "outputId": "21daf162-78c9-4942-982a-6d03d32e91f0"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2180,7 +2180,7 @@
         },
         "outputId": "1065565b-0523-4fc8-f938-1d439949af49"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2233,7 +2233,7 @@
         },
         "outputId": "920bcc31-e101-4ba6-b0f8-3390bf742065"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2303,7 +2303,7 @@
         },
         "outputId": "8a9ec4f6-dfb7-49fe-c8bd-2397c8c52ab6"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2346,7 +2346,7 @@
         },
         "outputId": "2b046819-60cf-4d8a-fc6a-ba2af65f0ae4"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2417,7 +2417,7 @@
       "metadata": {
         "id": "jlEP-c2YthpB"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -2434,7 +2434,7 @@
       "metadata": {
         "id": "azR_cX-ILghB"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -2447,9 +2447,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8796e46f-5740-4250-83ea-4ca62e7b6426"
+        "outputId": "b3c77a36-43d3-40f3-9581-ecae5a0152dd"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2459,7 +2459,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -2475,7 +2475,7 @@
         },
         "outputId": "527ee5c4-b57b-4d2b-8cd7-80d6e355f792"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2503,9 +2503,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "19633e4e-156c-49c4-c045-49877278dbdf"
+        "outputId": "7f193bab-6175-4219-def5-868cf293aa53"
       },
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -2532,12 +2532,12 @@
       ],
       "metadata": {
         "id": "OeCFdGRwZAcj",
-        "outputId": "c0ca1089-0ec6-4275-f0ad-8edad3262d3a",
+        "outputId": "1100490d-3847-4941-a217-b2eedeb41ef0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -2580,39 +2580,143 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Nota: la tupla, solo opera con la lista pero no se puede modificar los datos\n",
+        "nombres"
+      ],
       "metadata": {
-        "id": "YA1zJ0G6LkTy"
+        "id": "YA1zJ0G6LkTy",
+        "outputId": "ab2959fa-7014-46b9-bfcc-f9605d4fdcd4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Juan', 'Maria', 'José', 'Claudia', 'Ana']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from random import randint\n",
+        "def genera_numero():\n",
+        "  return randint(0,999)"
+      ],
       "metadata": {
         "id": "yBzPwhGiLkWa"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "genera_numero()"
+      ],
       "metadata": {
-        "id": "9qgGAjSyLndK"
+        "id": "9qgGAjSyLndK",
+        "outputId": "53af3945-5187-4338-d063-dffdec00ca56",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "748"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombres[0][0]"
+      ],
+      "metadata": {
+        "id": "CIIz_erMdQ3o",
+        "outputId": "89779276-65a9-4e1f-ea77-904012f6a4ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'J'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "codigo_estudiantes=[]\n",
+        "\n",
+        "for i in range(len(nombres)):\n",
+        "  codigo_estudiantes.append((nombres[i], nombres[i][0]+str(genera_numero())))\n"
+      ],
       "metadata": {
         "id": "jVRxtOyeLngM"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "codigo_estudiantes"
+      ],
+      "metadata": {
+        "id": "1VITNomEdtNV",
+        "outputId": "99d4b6d7-b18c-468f-8a04-79cac59318c7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Juan', 'J721'),\n",
+              " ('Maria', 'M26'),\n",
+              " ('José', 'J639'),\n",
+              " ('Claudia', 'C887'),\n",
+              " ('Ana', 'A412')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "markdown",
