Comprehension de listas

--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -2063,26 +2063,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "87a82caa-5916-4361-e494-5a2a00f13059"
+        "outputId": "26a6a5f4-47ae-4b73-84cd-4bcff36cce5b"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "5. Ingrese la nota {i+1}: 3\n",
-            "5. Ingrese la nota {i+1}: 5\n",
+            "5. Ingrese la nota {i+1}: 6\n",
             "5. Ingrese la nota {i+1}: 7\n",
+            "5. Ingrese la nota {i+1}: 8\n",
             "5. Ingrese la nota {i+1}: 9\n",
             "5. Ingrese la nota {i+1}: 10\n",
-            "5.- La nota promedio de los jueces es: 6.80\n",
-            "5.1. Ingrese la nota 1: 3\n",
-            "5.1. Ingrese la nota 2: 5\n",
-            "5.1. Ingrese la nota 3: 7\n",
+            "5.- La nota promedio de los jueces es: 8.00\n",
+            "5.1. Ingrese la nota 1: 6\n",
+            "5.1. Ingrese la nota 2: 7\n",
+            "5.1. Ingrese la nota 3: 8\n",
             "5.1. Ingrese la nota 4: 9\n",
             "5.1. Ingrese la nota 5: 10\n",
-            "5.1. Nota de la maniobra: 7.00\n"
+            "5.1. Nota de la maniobra: 8.00\n"
           ]
         }
       ]
@@ -2178,9 +2178,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1065565b-0523-4fc8-f938-1d439949af49"
+        "outputId": "7f0ddf22-4dff-4937-fe6c-9400019c88d8"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -2417,7 +2417,7 @@
       "metadata": {
         "id": "jlEP-c2YthpB"
       },
-      "execution_count": 3,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -2434,7 +2434,7 @@
       "metadata": {
         "id": "azR_cX-ILghB"
       },
-      "execution_count": 4,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -2447,9 +2447,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b3c77a36-43d3-40f3-9581-ecae5a0152dd"
+        "outputId": "4459add9-20d9-408c-ac80-d0123d602cba"
       },
-      "execution_count": 5,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2459,7 +2459,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 17
         }
       ]
     },
@@ -2473,9 +2473,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "527ee5c4-b57b-4d2b-8cd7-80d6e355f792"
+        "outputId": "dd051b0b-8b8a-43fa-996f-77f6f186881d"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2485,7 +2485,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 18
         }
       ]
     },
@@ -2503,9 +2503,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7f193bab-6175-4219-def5-868cf293aa53"
+        "outputId": "2887bf12-642d-47ef-fc48-9bcca7012660"
       },
-      "execution_count": 6,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -2532,12 +2532,12 @@
       ],
       "metadata": {
         "id": "OeCFdGRwZAcj",
-        "outputId": "1100490d-3847-4941-a217-b2eedeb41ef0",
+        "outputId": "6f870372-8f15-458c-ebc6-b03a6ea7944a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -2581,17 +2581,17 @@
     {
       "cell_type": "code",
       "source": [
-        "#Nota: la tupla, solo opera con la lista pero no se puede modificar los datos\n",
+        "#Nota: la tupla, solo se puede operar con ella, pero no se puede modificar los datos\n",
         "nombres"
       ],
       "metadata": {
         "id": "YA1zJ0G6LkTy",
-        "outputId": "ab2959fa-7014-46b9-bfcc-f9605d4fdcd4",
+        "outputId": "b5bf39d5-0311-468f-acdd-edadb8ee789f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2601,7 +2601,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 21
         }
       ]
     },
@@ -2615,7 +2615,7 @@
       "metadata": {
         "id": "yBzPwhGiLkWa"
       },
-      "execution_count": 11,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -2625,22 +2625,22 @@
       ],
       "metadata": {
         "id": "9qgGAjSyLndK",
-        "outputId": "53af3945-5187-4338-d063-dffdec00ca56",
+        "outputId": "1ebe7f10-2157-4c2e-8821-317517e288af",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "748"
+              "486"
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 23
         }
       ]
     },
@@ -2651,13 +2651,13 @@
       ],
       "metadata": {
         "id": "CIIz_erMdQ3o",
-        "outputId": "89779276-65a9-4e1f-ea77-904012f6a4ca",
+        "outputId": "fbe87991-f92b-4c48-c357-94e5f3df2908",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
-      "execution_count": 17,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2670,7 +2670,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 24
         }
       ]
     },
@@ -2685,7 +2685,7 @@
       "metadata": {
         "id": "jVRxtOyeLngM"
       },
-      "execution_count": 18,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -2695,26 +2695,26 @@
       ],
       "metadata": {
         "id": "1VITNomEdtNV",
-        "outputId": "99d4b6d7-b18c-468f-8a04-79cac59318c7",
+        "outputId": "11a1fb8e-b6e3-4aaf-d4bf-2817c8381684",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[('Juan', 'J721'),\n",
-              " ('Maria', 'M26'),\n",
-              " ('José', 'J639'),\n",
-              " ('Claudia', 'C887'),\n",
-              " ('Ana', 'A412')]"
+              "[('Juan', 'J169'),\n",
+              " ('Maria', 'M577'),\n",
+              " ('José', 'J338'),\n",
+              " ('Claudia', 'C14'),\n",
+              " ('Ana', 'A605')]"
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 26
         }
       ]
     },
@@ -2774,26 +2774,47 @@
       "metadata": {
         "id": "J_atQRQdlpNe"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas=[[8.0, 9.0, 10.0], [9.0, 7.0, 6.0], [3.4, 7.0, 7.0], [5.5, 6.6, 8.0], [6.0, 10.0, 9.5]]"
+      ],
       "metadata": {
         "id": "h7LeBrgnLAG6"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#creamos compresion de listas\n",
+        "promedios = [round(promedio(nota),1) for nota in notas]\n",
+        "promedios"
+      ],
       "metadata": {
-        "id": "3j8_H7e8LAJZ"
+        "id": "3j8_H7e8LAJZ",
+        "outputId": "011a6d38-4101-4bc5-8890-8173aa362598",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[9.0, 7.3, 5.8, 6.7, 8.5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2820,27 +2841,54 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombres= [('Juan', 'J169'), ('Maria', 'M577'), ('José', 'J338'), ('Claudia', 'C14'), ('Ana', 'A605')]\n",
+        "promedios=[9.0, 7.3, 5.8, 6.7, 8.5]"
+      ],
       "metadata": {
         "id": "QK-ubmmrLC7I"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "df1Q8GGELC9b"
-      },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "ukmxO58JM-Vo"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "<font color=green>**Tip:**</font> Para lograr parear los promedios y\n",
-        "los nombres fácilmente, podemos acudir a otra  built-in function: `zip()`\n",
+        "nombres = [nombre[0] for nombre in nombres]\n",
+        "nombres"
+      ],
+      "metadata": {
+        "id": "df1Q8GGELC9b",
+        "outputId": "b2325589-132a-493a-a7c5-8cc7b51f4fbe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Juan', 'Maria', 'José', 'Claudia', 'Ana']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color=green>**Tip:**</font> Para lograr parear los promedios y los nombres fácilmente, podemos acudir a otra  built-in function: `zip()`\n",
         "\n",
         "Esta recibe uno o más iterables (lista, string, dict, etc.) y los retorna como un iterador de tuplas donde cada elemento de los iterables es pareado."
       ],
@@ -2850,21 +2898,85 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "zip(nombres,promedios)"
+      ],
       "metadata": {
-        "id": "841v92WvLEol"
+        "id": "841v92WvLEol",
+        "outputId": "86449b4d-8b56-4615-ba3f-f1b2768fd12e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<zip at 0x7f7a52155dc0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#debo decir que forma o iterable lo quiero juntar\n",
+        "estudiantes = list(zip(nombres,promedios))\n",
+        "estudiantes"
+      ],
       "metadata": {
-        "id": "U8b4G_2oLErp"
+        "id": "U8b4G_2oLErp",
+        "outputId": "d32aae39-0b62-41aa-8548-7e41c89be491",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Juan', 9.0), ('Maria', 7.3), ('José', 5.8), ('Claudia', 6.7), ('Ana', 8.5)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#generamos la lista para aquellos estudiantes que posean un promedio final mayor o igual a 8\n",
+        "candidatos = [estudiante[0] for estudiante in estudiantes if estudiante[1] >=8]\n",
+        "candidatos"
+      ],
+      "metadata": {
+        "id": "BN_OBjhAPEME",
+        "outputId": "d4190b22-54de-4194-b782-5f3449f36e5e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Juan', 'Ana']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
     },
     {
       "cell_type": "markdown",
