--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -3919,11 +3919,11 @@
         "  print('Estudiante no matriculado(a) en el grupo')"
       ],
       "metadata": {
-        "id": "WX49GmkeFoj5",
-        "outputId": "dde3a0af-6de8-4217-9405-06131cdb6017",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WX49GmkeFoj5",
+        "outputId": "dde3a0af-6de8-4217-9405-06131cdb6017"
       },
       "execution_count": 76,
       "outputs": [
@@ -3952,11 +3952,11 @@
         "    print(f\"Código del error: {type(e).__name__}\")  # Esto te da el tipo de error, en este caso 'KeyError'"
       ],
       "metadata": {
-        "id": "V_2NnBr3IdKe",
-        "outputId": "8f58b819-fc8b-4b98-ce88-9b74f6d3ceb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "V_2NnBr3IdKe",
+        "outputId": "8f58b819-fc8b-4b98-ce88-9b74f6d3ceb8"
       },
       "execution_count": 75,
       "outputs": [
@@ -4353,11 +4353,11 @@
         "  print('La consulta ha concluído.')"
       ],
       "metadata": {
-        "id": "PEsmF_lSXXel",
-        "outputId": "1992c7b4-db52-4785-e464-6416572b733d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PEsmF_lSXXel",
+        "outputId": "1992c7b4-db52-4785-e464-6416572b733d"
       },
       "execution_count": 104,
       "outputs": [
@@ -4387,11 +4387,11 @@
         "  print('La consulta ha concluído.')"
       ],
       "metadata": {
-        "id": "covb0EIZYTCU",
-        "outputId": "6960da91-ca66-48ec-a6a0-a5342378be67",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "covb0EIZYTCU",
+        "outputId": "6960da91-ca66-48ec-a6a0-a5342378be67"
       },
       "execution_count": 106,
       "outputs": [
@@ -4422,11 +4422,11 @@
         "  print('La consulta ha concluído.')"
       ],
       "metadata": {
-        "id": "LO-0mVhmYbX_",
-        "outputId": "fef52ded-d7d2-44cb-cf02-5b016ed6c5d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LO-0mVhmYbX_",
+        "outputId": "fef52ded-d7d2-44cb-cf02-5b016ed6c5d8"
       },
       "execution_count": 107,
       "outputs": [
@@ -4439,6 +4439,220 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#En este ejemplo, los códigos proporcionados consisten en una estructura try-except que recibe los valores de salario de\n",
+        "# cada persona y debe devolver una lista con los salarios actualizados. ¿Cuáles de las opciones a continuación lanzan una\n",
+        "#excepción en el código y por qué?\n",
+        "#opcion A\n",
+        "empleados = {'José': 2000, 'Ana': 2200, 'Juan': 2500, 'Maria': 3800}\n",
+        "\n",
+        "try:\n",
+        "  aumento = list(map(lambda x: x[1] * 1.1, empleados.items()))\n",
+        "except ValueError as e:\n",
+        "  print(type(e), f'Erro: {e}')\n",
+        "else:\n",
+        "  print(aumento)\n",
+        "finally:\n",
+        "  print(\"Proceso concluído!\")"
+      ],
+      "metadata": {
+        "id": "R1e0j0WBbvtA",
+        "outputId": "fcb0f39a-4ee5-488b-9365-e4b723c190f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2200.0, 2420.0, 2750.0, 4180.0]\n",
+            "Proceso concluído!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Opcion B\n",
+        "try:\n",
+        "  aumento = list(map(lambda x: x * 1.1, empleado.values()))\n",
+        "except Exception as e:\n",
+        "  print(type(e), f'Erro: {e}')\n",
+        "else:\n",
+        "  print(aumento)\n",
+        "finally:\n",
+        "  print(\"Proceso concluído!\")"
+      ],
+      "metadata": {
+        "id": "kQGf-KTKcHTP",
+        "outputId": "252a26f5-1033-4ca5-f853-444a99c5c378",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'NameError'> Erro: name 'empleado' is not defined\n",
+            "Proceso concluído!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#opcion C\n",
+        "try:\n",
+        "  aumento = list(map(lambda x: x[1] * 1.1), empleados.values())\n",
+        "except Exception as e:\n",
+        "  print(type(e), f'Erro: {e}')\n",
+        "else:\n",
+        "  print(aumento)\n",
+        "finally:\n",
+        "  print(\"Proceso concluído!\")"
+      ],
+      "metadata": {
+        "id": "xcB9RrxLcYYm",
+        "outputId": "19a3a139-7426-42c0-9997-91cce25f6ae6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'TypeError'> Erro: map() must have at least two arguments.\n",
+            "Proceso concluído!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#opcion D\n",
+        "try:\n",
+        "  aumento = list(map(lambda x: x * 1.1, empleados.values()))\n",
+        "except ValueError as e:\n",
+        "  print(type(e), f'Erro: {e}')\n",
+        "else:\n",
+        "  print(aumento)\n",
+        "finally:\n",
+        "  print(\"Proceso concluído!\")"
+      ],
+      "metadata": {
+        "id": "Kz5Z82WLcpco",
+        "outputId": "4242017c-0302-4a9f-b26a-2e96db18c545",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2200.0, 2420.0, 2750.0, 4180.0]\n",
+            "Proceso concluído!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## <font color=green> 5 Adicional: Creando mis propias excepciones"
+      ],
+      "metadata": {
+        "id": "aQ50E2jThZmC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  notas = [5.0, 2.0, 6.0, 8.0]\n",
+        "  exhibir_notas_anuales(notas)\n",
+        "except Exception as e:\n",
+        "  print(type(e), f'Erro: {e}')\n"
+      ],
+      "metadata": {
+        "id": "462UA7plhBB-",
+        "outputId": "63b567b4-edaa-45e1-890b-eda14e05b1b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'NameError'> Erro: name 'exhibir_notas_anuales' is not defined\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "def exhibir_notas_anuales(lista):\n",
+        "\n",
+        "    if lista > 3:\n",
+        "        raise ValueError(\"La lista de notas debe tener 3 elementos\")\n",
+        "\n",
+        "    for i, nota in enumerate(lista):\n",
+        "        print(f\"{i+1}ª Trimestre = {nota}\")\n",
+        "print(exhibir_notas_anuales[7,8,9])"
+      ],
+      "metadata": {
+        "id": "4I3a3nXph_bf",
+        "outputId": "7c70aca0-0bf9-4038-aba8-efe3c125a27f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
+        }
+      },
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'function' object is not subscriptable",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-119-4d122a4861c7>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnota\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlista\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{i+1}ª Trimestre = {nota}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexhibir_notas_anuales\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'function' object is not subscriptable"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nNw3Jp9giIj1"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
